@startuml 
class Departamento <<entity>> {
  nome: String
}

class Curso <<entity>> {
  nome: String
}

class Disciplina <<entity>> {
  codigo: String
  nome: String
}

class Professor <<entity>> {
  nome: String
  matricula: String
  nome: String
  dataNasc: Date
  turmas()
  modificaDados()
}

class Aluno <<entity>> {
  nome: String
  matricula: String
  dataNasc: Date
  turmas()
  modificaDados()
}

class Grupo <<entity>> {
  addMembro()
}

enum StatusProjeto <<enumeration>> {
  concluido
  cancelado
  suspenso
  emProgresso
}

class Projeto <<entity>> {
  titulo: String
  descricao: String
  dataCriacao: Date
  publico: Boolean
  tags: String
  modificaDados()
  verificarCumpreCriterios()
  adicionarGrupo()
  validarOferta()
}

class Proposta <<entity>> {
  titulo: String
  descricao: String
  tags: String
  dataProposta: Date
  promover()
}

class Turma <<entity>> {
  codigo: String
  ano: Integer
  periodo: Integer
  adicionarOferta()
  pesquisarAluno()
  adicionarAluno()
}

class Avaliacao <<entity>> {
  mensagem: String
  aprovado: Boolean
  verificaProposta()
}

Departamento "1..1" -- "1..*" Disciplina : oferta >
Departamento "1..1" -- "1..*" Curso : responsável >
Aluno "1..*" -- "1..1" Curso : cursa >
Professor "1..*" -- "1..1" Departamento : trabalha >

Proposta "1..1" -- "0..1" Projeto : promovida >

Aluno "1..*" -- "0..*" Grupo : forma >
Aluno "0..*" -- "0..*" Turma : estuda >
Aluno "1..1" -- "0..*" Proposta : é autor >
Avaliacao "1..1" -- "1..1" Proposta : recebe <

Grupo "1..1" -- "1..1" Projeto : responsável >
Projeto "0..*" -- "1..1" Turma : pertence >

Professor "1..1" -- "0..*" Turma : leciona >
Professor "1..1" -- "0..*" Avaliacao : realiza >

Turma "0..*" -- "1..1" Disciplina : instância de >

Projeto "0..*" -- "1..1" StatusProjeto : possui >
@enduml
